tests222/tests2/test351.out
lli: <stdin>:1:1: error: expected top-level entity
line 4: variable P5 is not defined
^
